# PT-visualisation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run.ps1
src/: canvas.hpp  expr.cpp  expr.hpp  odeSystem.cpp  odeSystem.hpp  ui.hpp
